k8s/mongo-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongo-deployment
  labels:
    app: mongo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongo
  template:
    metadata:
      labels:
        app: mongo
    spec:
      containers:
      - name: mongo
        image: mongo:5.0
        ports:
        - containerPort: 27017
        volumeMounts:
        - name: mongo-initdb
          mountPath: /docker-entrypoint-initdb.d
        - name: mongo-volume
          mountPath: /var/lib/mongodb/data
      volumes:
      - name: mongo-initdb
        configMap:
          name: mongo-initdb
      - name: mongo-volume
        persistentVolumeClaim:
          claimName: mongo-volume-claim
